@@ -7,14 +7,17 @@
 [x] root access stuff
 [x] save and restore tree state
 [ ] add the extra columns not shown by default
+[ ] customize columns in prefs dialog
 [x] memaps dialog needs porting to tree view
 [x] hidden processes dialog needs to be able to select multi strings 
-[x/2] make all dialogs proper ie. use gtk_dialog etc.
-[ ] disk sizing is not right - 500 kb instead of 500 MB
-[ ] removing a node from the tree should remove all children
+[x] make all dialogs proper ie. use gtk_dialog etc.
+[x] disk sizing is not right - 500 kb instead of 500 MB
+[x] removing a node from the tree should remove all children
 [x] many strings are untranslated
 [ ] merge all changes from stable branch
 [ ] many memory leaks
+[ ] command label needed for infoview
+[ ] clean up prettytable.c. Add back support for custom icons
 
 -- 1.2 new features --
 [ ] Should be able to drag a process to "end process" button and
