@@ -31,6 +31,8 @@ AC_SUBST(PROCMAN_LIBS)
 dnl Check for LibGTop
 GNOME_INIT_LIBGTOP(1.0.6, fail)
 
+AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${prefix}/share/pixmaps")
+
 dnl Add the languages which your application supports here.
 ALL_LINGUAS="da ru de es it no pl sv tr uk zh_TW"
 
