@@ -1,8 +1,8 @@
 [Desktop Entry]
-_Name=Process Manager
-_Comment=View Running Processes
+_Name=Procman System Monitor
+_Comment=View current processes and monitor system state
 TryExec=procman
 Exec=procman
-Icon=
+Icon=procman.png
 Terminal=0
 Type=Application
