@@ -1,5 +1,15 @@
 2001-11-10  Kevin Vandersloot <kfv101@psu.edu>
 
+	From stable:
+
+	2001-10-19  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.c: add the Ximian gtop icon as default window
+	icon
+
+
+2001-11-10  Kevin Vandersloot <kfv101@psu.edu>
+
 	* memmaps.c: refactor some code so that multiple dialogs
 	can be present at the same time, and selecting multiple
 	processes will show multiple dialogs
